# ccake

./: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  server.json  test_server.py  test_simple.py  validate_schema.py
.github/workflows/: publish-mcp.yml  tests.yml
tests/: conftest.py  test_e2e.py  test_integration.py  test_timeout.py
