[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccake-mcp"
version = "1.0.0"
description = "MiniZinc Constraint Solver MCP - Solve constraint satisfaction and optimization problems using MiniZinc"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "r33drichards", email = "r33drichards@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pydantic",
    "mcp",
    "minizinc",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/r33drichards/ccake"
Repository = "https://github.com/r33drichards/ccake"
Issues = "https://github.com/r33drichards/ccake/issues"

[project.scripts]
ccake-mcp = "main:app.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]

[tool.setuptools.package-data]
"*" = ["*.py"]